ローカライズのファイル生成でエラーが出たので修正

--- a/packages/app/lib/l10n/app_en.arb
+++ b/packages/app/lib/l10n/app_en.arb
@@ -8,7 +8,7 @@
 
   "logInTitle": "Welcome back",
   "emailAddress": "Email Address",
-  "continue": "Continue",
+  "continue1": "Continue",
   "toSignUpMessage": "Don't have an account?",
   "or": "or",
   "continueGoogle": "continue With Google",
