サインイン画面を追加

--- a/packages/app/lib/l10n/app_en.arb
+++ b/packages/app/lib/l10n/app_en.arb
@@ -10,8 +10,8 @@
   "emailAddress": "Email Address",
   "continue1": "Continue",
   "toSignUpMessage": "Don't have an account?",
-  "or": "or",
-  "continueGoogle": "continue With Google",
+  "or": "OR",
+  "continueGoogle": "Continue With Google",
 
   "enterPassword": "Enter your password",
   "edit": "Edit",
